--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -119,7 +119,7 @@
             "justMyCode": false,
         },
         {
-            "name": "Evaluation + Inference",
+            "name": "Inference + Evaluation",
             "type": "python",
             "request": "launch",
             "env": {
@@ -130,7 +130,7 @@
             "args": [
                 "run",
                 "--pipeline",
-                "evaluation_inference_pipeline"
+                "inference_evaluation_pipeline"
             ],
             "console": "integratedTerminal",
             "justMyCode": false,
