--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "name": "current file",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}",
@@ -18,7 +18,7 @@
         },
         {
             "name": "Data Scraping",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -35,7 +35,7 @@
         },
         {
             "name": "Data Preprocessing",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -52,7 +52,7 @@
         },
         {
             "name": "Feature Selection",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -69,7 +69,7 @@
         },
         {
             "name": "Model Comparison",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -86,7 +86,7 @@
         },
         {
             "name": "Hyperparameter Tuning",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -103,7 +103,7 @@
         },
         {
             "name": "Model Training",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -120,7 +120,7 @@
         },
         {
             "name": "Inference + Evaluation",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -137,7 +137,7 @@
         },
         {
             "name": "Live Optimization",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -154,7 +154,7 @@
         },
         {
             "name": "Backtest Optimization",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -171,7 +171,7 @@
         },
         {
             "name": "Init DB",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
@@ -188,12 +188,12 @@
         },
         {
             "name": "current file",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}\\fpl",
+                "PYTHONPATH": "${workspaceFolder}\\src",
             },
-            "cwd": "${workspaceFolder}\\fpl",
+            "cwd": "${workspaceFolder}",
             "program": "${file}",
             "justMyCode": false,
             "console": "integratedTerminal",
