--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -38,7 +38,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -55,7 +55,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -72,7 +72,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -89,7 +89,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -106,7 +106,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -123,7 +123,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -140,7 +140,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -157,7 +157,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
@@ -174,7 +174,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}\\src"
             },
             "cwd": "${workspaceFolder}",
             "program": "src\\fpl\\custom_run\\kedro_cli.py",
