--- a/conf/base/logging.yml
+++ b/conf/base/logging.yml
@@ -19,7 +19,7 @@ handlers:
     formatter: simple
     filename: logs/info.log
     maxBytes: 10485760 # 10MB
-    backupCount: 20
+    backupCount: 10
     encoding: utf8
     delay: True
 
@@ -29,7 +29,7 @@ handlers:
     formatter: simple
     filename: logs/errors.log
     maxBytes: 10485760 # 10MB
-    backupCount: 20
+    backupCount: 10
     encoding: utf8
     delay: True
 
@@ -41,7 +41,7 @@ loggers:
   kedro:
     level: INFO
 
-  src:
+  fpl:
     level: INFO
 
 root:
