align 2024-2025 player names

--- a/adhoc/player_name/fbref2fpl_player_overrides.yml
+++ b/adhoc/player_name/fbref2fpl_player_overrides.yml
@@ -82,6 +82,7 @@ name_only_mapping:
   Oscar: Oscar dos Santos Emboaba Junior
   José Izquierdo: José Izquierdo
   Hélder Costa: Hélder Wander Sousa de Azevedo e Costa
+  Joselu: Jose Luis Mato Sanmartín
 
 id_name_mapping:
   - [94b2001f, Danilo, Danilo Luiz da Silva]
