--- a/conf/base/parameters/preprocess.yml
+++ b/conf/base/parameters/preprocess.yml
@@ -1,11 +1,11 @@
-data:
+preprocess:
   elo_learning_rate: 0.1
   home_away_weight: 0.5
   train_start_year: 2017-2018
-  holdout_year: 2022-2023
+  holdout_year: 2023-2024
   ma_lag: 5
   debug_run: False
-  use_cache: False
+  use_cache: True
   n_cores: 12
   do_not_impute:
     - season
@@ -13,6 +13,6 @@ data:
     - round
     - fpl_name
     - fpl_points
-    - value
     - player
     - pos
+    - cached
