--- a/conf/base/parameters/scraper.yml
+++ b/conf/base/parameters/scraper.yml
@@ -1,4 +1,4 @@
 scraper:
-  current_season: 2023-2024
+  current_season: 2024-2025
   current_season_only: True
-  headless: False
+  headless: True
