fix new season's missing elo scores

--- a/data/preprocess/fpl2fbref_team_mapping.yml
+++ b/data/preprocess/fpl2fbref_team_mapping.yml
@@ -4,22 +4,30 @@ Bournemouth: Bournemouth
 Brentford: Brentford
 Brighton: Brighton
 Burnley: Burnley
+Cardiff: Cardiff City
 Chelsea: Chelsea
 Crystal Palace: Crystal Palace
 Everton: Everton
 Fulham: Fulham
+Huddersfield: Huddersfield
+Hull: Hull City
+Ipswich: Ipswich Town
 Leeds: Leeds United
 Leicester: Leicester City
 Liverpool: Liverpool
 Luton: Luton Town
 Man City: Manchester City
 Man Utd: Manchester Utd
+Middlesbrough: Middlesbrough
 Newcastle: Newcastle Utd
 Norwich: Norwich City
 Nott'm Forest: Nott'ham Forest
 Sheffield Utd: Sheffield Utd
 Southampton: Southampton
 Spurs: Tottenham
+Stoke: Stoke City
+Sunderland: Sunderland
+Swansea: Swansea City
 Watford: Watford
 West Brom: West Brom
 West Ham: West Ham
