fpl team name for 2023-2024

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}",
+                "PYTHONPATH": "${workspaceFolder};${workspaceFolder}/src",
             },
             "cwd": "${workspaceFolder}",
             "program": "${file}",
