get current season from api data

--- a/conf/base/parameters/optimization.yml
+++ b/conf/base/parameters/optimization.yml
@@ -2,7 +2,6 @@ optimization:
   mps_path: data/optimization/models/fpl_model.mps
   solution_path: data/optimization/solutions/fpl_model_solution.sol
 
-  current_season: 2024-2025
   team_id: 1792016
 
   wildcard_week: null
@@ -25,3 +24,4 @@ optimization:
   backtest_players:
     Me: 1792016
     Donald: 307190
+  backtest_season: 2024-2025
