--- a/conf/base/parameters/hyperopt.yml
+++ b/conf/base/parameters/hyperopt.yml
@@ -1,3 +1,17 @@
+hyperopt:
+  target:
+    name: total_actual_points
+    max_trials: 50
+    strategy: max
+    algo: tpe
+    early_termination: null
+  optimization:
+    horizon:
+      method: choice
+      values: [1, 2, 3, 4, 5, 6, 7]
+    transfer_horizon:
+      method: choice
+      values: [1, 2, 3, 4, 5, 6, 7]
 # hyperopt:
 #   target:
 #     name: val_score
