use hyperopt for backtest

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -136,7 +136,7 @@ HOLDOUT_METRICS:
   table_name: experiment
   credentials: db_credentials
 
-TRAIN_METRICS:
+EXPERIMENT_METRICS:
   type: fpl.extras.datasets.ExperimentMetrics
   table_name: experiment
   credentials: db_credentials
