--- a/conf/base/parameters/hyperopt.yml
+++ b/conf/base/parameters/hyperopt.yml
@@ -1,17 +1,17 @@
-hyperopt:
-  target:
-    name: total_actual_points
-    max_trials: 18
-    strategy: max
-    algo: tpe
-    early_termination: null
-  optimization:
-    horizon:
-      method: choice
-      values: [4, 5, 6, 7]
-    transfer_horizon:
-      method: choice
-      values: [1, 2, 3]
+# hyperopt:
+#   target:
+#     name: total_actual_points
+#     max_trials: 18
+#     strategy: max
+#     algo: tpe
+#     early_termination: null
+#   optimization:
+#     horizon:
+#       method: choice
+#       values: [8, 9, 10, 11]
+#     transfer_horizon:
+#       method: choice
+#       values: [1]
 # hyperopt:
 #   target:
 #     name: val_score
