--- a/conf/base/parameters/hyperopt.yml
+++ b/conf/base/parameters/hyperopt.yml
@@ -8,7 +8,7 @@
 #   optimization:
 #     horizon:
 #       method: choice
-#       values: [8, 9, 10, 11]
+#       values: [3, 4, 5, 6, 7, 8]
 #     transfer_horizon:
 #       method: choice
 #       values: [1]
