--- a/conf/base/parameters/optimization.yml
+++ b/conf/base/parameters/optimization.yml
@@ -11,8 +11,11 @@ optimization:
   free_hit_week: null
   triple_captain_week: null
 
-  horizon: 8
-  transfer_horizon: 1
+  unavailable_players:
+    Salah: [21, 22, 23, 24]
+
+  horizon: 3
+  transfer_horizon: 2
   decay: 0.84
   free_transfer_bonus: 1.5
   in_the_bank_bonus: 0.08
@@ -20,7 +23,7 @@ optimization:
     0: 0.03
     1: 0.21
     2: 0.06
-    3: 0.002
+    3: 0.03
 
   backtest_players:
     Me: 1792016
