--- a/conf/base/parameters/points_prediction.yml
+++ b/conf/base/parameters/points_prediction.yml
@@ -9,6 +9,7 @@ points_prediction:
   target: fpl_points
   baseline_columns: [fpl_points_ma5]
   info_columns:
+    - element
     - fpl_name
     - date
     - player
