--- a/conf/base/parameters/hyperopt.yml
+++ b/conf/base/parameters/hyperopt.yml
@@ -1,7 +1,7 @@
 # hyperopt:
 #   target:
 #     name: total_actual_points
-#     max_trials: 8
+#     max_trials: 12
 #     strategy: max
 #     algo: tpe
 #     early_termination: null
@@ -11,7 +11,7 @@
 #       values: [3, 4, 5, 6]
 #     transfer_horizon:
 #       method: choice
-#       values: [2, 3]
+#       values: [1, 2, 3]
 # hyperopt:
 #   target:
 #     name: val_score
