--- a/conf/base/parameters/hyperopt.yml
+++ b/conf/base/parameters/hyperopt.yml
@@ -1,17 +1,17 @@
 # hyperopt:
 #   target:
 #     name: total_actual_points
-#     max_trials: 12
+#     max_trials: 3
 #     strategy: max
 #     algo: tpe
 #     early_termination: null
-#   optimization:
-#     horizon:
-#       method: choice
-#       values: [3, 4, 5, 6]
-#     transfer_horizon:
-#       method: choice
-#       values: [1, 2, 3]
+#   groups:
+#     optimization:
+#       bench_weight_range:
+#         min:
+#           # - 0.05
+#           # - 0.1
+#           - 0.15
 # hyperopt:
 #   target:
 #     name: val_score
@@ -33,16 +33,16 @@
 #   #       fit_intercept:
 #   #         method: choice
 #   #         values: [True, False]
-#   0:
-#     model:
-#       ridge_params:
-#         alpha:
-#           method: uniform
-#           low: 0.001
-#           high: 10
-#         fit_intercept:
-#           method: choice
-#           values: [True, False]
+# 0:
+#   model:
+#     ridge_params:
+#       alpha:
+#         method: uniform
+#         low: 0.001
+#         high: 10
+#       fit_intercept:
+#         method: choice
+#         values: [True, False]
 # # 0:
 # #   model:
 # #     xgboost_params:
