--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "lxml>=5.3.0",
     "matplotlib>=3.10.0",
     "numba>=0.60.0",
+    "pandas<2.0",
     "paramiko>=3.5.0",
     "pulp>=2.9.0",
     "pycaret>=2.2.2",
@@ -23,11 +24,11 @@ dependencies = [
     "regex>=2024.11.6",
     "scikit-learn<1.3.0",
     "seaborn>=0.13.2",
-    "sqlalchemy>=2.0.36",
+    "sqlalchemy<2.0",
     "tenacity>=9.0.0",
     "thefuzz>=0.22.1",
     "webdriver-manager>=4.0.2",
-    "xgboost>=2.1.3",
+    "xgboost>=1.7.1",
     "scipy<1.12",
     "selenium>=4.27.1",
 ]
